
    o   The parsed contents of a NAMESPACE file are now stored at
        installation and if available used to speed loading the
        package, so packages with namespaces should be reinstalled.

    o   Argument `asp' although not a graphics parameter is accepted
	in the ... of graphics functions without a warning.  It now
	works as expected in contour().


UTILITIES

    o	R CMD check  now runs the (Rd) examples with default RNGkind
	(uniform & normal) and set.seed(1).
	example(*, setRNG = TRUE) does the same.

    o	undoc() in package `tools' has a new default of `use.values =
	NULL' which produces a warning whenever the default values of
	function arguments differ between documentation and code.
	Note that this affects "R CMD check" as well.


C-LEVEL FACILITIES

    o   arraySubscript and vectorSubscript take a new argument which
        is a function pointer that provides access to character 
        strings (such as the names vector) rather than assuming these
        are passed in.

    o	R_CheckUserInterrupts is now described in `Writing R Extensions'
	and there is a new equivalent subroutine rchkusr for calling
	from FORTRAN code.


DEPRECATED & DEFUNCT

    o	print.coefmat() is defunct, replaced by printCoefmat().

    o	codes() and codes<-() are defunct.

    o	anovalist.lm (replaced in 1.2.0) is now defunct.

    o	glm.fit.null(), lm.fit.null() and lm.wfit.null() are defunct.

    o	print.atomic() is defunct.

    o	The command-line arguments --nsize and --vsize are no longer
	recognized as synonyms for --min-nsize and --min-vsize (which
	replaced them in 1.2.0).

    o   Unnecessary methods coef.{g}lm and fitted.{g}lm
	have been removed: they were each identical to the default
	method.


INSTALLATION CHANGES

    o	The defaults for configure are now --without-zlib
	--without-bzlib --without-pcre.  PCRE >= 4.0 is now required:
	the included PCRE sources have been updated to version 4.4.

    o	configure no longer lists bzip2 and PCRE as `additional